test/files/neg/t7289_status_quo.check
t7289_status_quo.scala:9: error: could not find implicit value for parameter e: Test1.Ext[List[Int]]
  implicitly[Ext[List[Int]]]                    // fails - not found
            ^
t7289_status_quo.scala:11: error: could not find implicit value for parameter e: Test1.Ext[List[List[List[Int]]]]
  implicitly[Ext[List[List[List[Int]]]]]        // fails - not found
            ^
t7289_status_quo.scala:23: error: could not find implicit value for parameter e: Test1.ExtCov[List[Int]]
  implicitly[ExtCov[List[Int]]]                 // fails - not found
            ^
t7289_status_quo.scala:24: error: could not find implicit value for parameter e: Test1.ExtCov[List[List[Int]]]
  implicitly[ExtCov[List[List[Int]]]]           // fails - not found
            ^
t7289_status_quo.scala:25: error: could not find implicit value for parameter e: Test1.ExtCov[List[List[List[Int]]]]
  implicitly[ExtCov[List[List[List[Int]]]]]     // fails - not found
            ^
5 errors found
